istio-example/istio-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider
  labels:
    app: provider
    version: v1.0.0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: provider
      version: v1.0.0
  template:
    metadata:
      labels:
        app: provider
        version: v1.0.0
    spec:
      containers:
        - name: provider
          image: registry.cn-hangzhou.aliyuncs.com/example-kube/provider:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  labels:
    app: consumer
    version: v1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
      version: v1.0.0
  template:
    metadata:
      labels:
        app: consumer
        version: v1.0.0
    spec:
      containers:
        - name: consumer
          image: registry.cn-hangzhou.aliyuncs.com/example-kube/consumer:1.0
          args:
            - --provider
            - provider
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: provider
  labels:
    app: provider
    service: provider
spec:
  ports:
    - port: 8081
      name: http
  selector:
    app: provider

---
apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    app: consumer
    service: consumer
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: consumer
